# SimplePiPico

./: README.md
HelloUSB/: CMakeLists.txt  source.c
PicoTest/: README.md
PicoTest/pico/: CMakeLists.txt  source.c
PicoTest/pico_w/: CMakeLists.txt
